--- a/index.html
+++ b/index.html
@@ -4,26 +4,51 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Vite App</title>
   </head>
   <body>
     <div id="app">
       <img
-        class="img"
-        src="./assets/GitHub-Mark.png"
+        class="img1"
+        src="./assets/fred-blue.svg"
+        alt="github logo"
+        height="50"
+        width="50"
+      />
+      <!-- <img
+        class="img2"
+        src="./assets/fred-orange.svg"
         alt="github logo"
         height="50"
         width="50"
       />
       <img
-        class="img2"
-        src="./assets/GitHub-Mark.png"
+        class="img3"
+        src="./assets/fred-pink.svg"
         alt="github logo"
         height="50"
         width="50"
-        style="background-color: red"
       />
+      <img
+        class="img4"
+        src="./assets/fred-purple.svg"
+        alt="github logo"
+        height="50"
+        width="50"
+      />
+      <img
+        class="img5"
+        src="./assets/fred-red.svg"
+        alt="github logo"
+        height="50"
+        width="50"
+      /> -->
     </div>
+    <button id="play">Play</button>
+    <button id="pause">Pause</button>
+    <button id="reverse">Reverse</button>
+    <button id="restart">Restart</button>
     <script type="module" src="./lesson1/main.js"></script>
   </body>
 </html>
