--- a/index.html
+++ b/index.html
@@ -9,46 +9,48 @@
   </head>
   <body>
     <div id="app">
-      <img
-        class="img1"
-        src="./assets/fred-blue.svg"
-        alt="github logo"
-        height="50"
-        width="50"
-      />
-      <!-- <img
-        class="img2"
-        src="./assets/fred-orange.svg"
-        alt="github logo"
-        height="50"
-        width="50"
-      />
-      <img
-        class="img3"
-        src="./assets/fred-pink.svg"
-        alt="github logo"
-        height="50"
-        width="50"
-      />
-      <img
-        class="img4"
-        src="./assets/fred-purple.svg"
-        alt="github logo"
-        height="50"
-        width="50"
-      />
-      <img
-        class="img5"
-        src="./assets/fred-red.svg"
-        alt="github logo"
-        height="50"
-        width="50"
-      /> -->
+      <div class="time">
+        <p>Sundays 9pm</p>
+      </div>
+      <div class="img">
+        <h1>Meet The Freds</h1>
+        <img
+          class="img1"
+          src="./assets/fred-blue.svg"
+          alt="github logo"
+          height="50"
+          width="50"
+        />
+        <img
+          class="img2"
+          src="./assets/fred-orange.svg"
+          alt="github logo"
+          height="50"
+          width="50"
+        />
+        <img
+          class="img3"
+          src="./assets/fred-pink.svg"
+          alt="github logo"
+          height="50"
+          width="50"
+        />
+        <img
+          class="img4"
+          src="./assets/fred-purple.svg"
+          alt="github logo"
+          height="50"
+          width="50"
+        />
+        <img
+          class="img5"
+          src="./assets/fred-red.svg"
+          alt="github logo"
+          height="50"
+          width="50"
+        />
+      </div>
     </div>
-    <button id="play">Play</button>
-    <button id="pause">Pause</button>
-    <button id="reverse">Reverse</button>
-    <button id="restart">Restart</button>
     <script type="module" src="./lesson1/main.js"></script>
   </body>
 </html>
